--- a/applications/WebMod/views/default/profile.html
+++ b/applications/WebMod/views/default/profile.html
@@ -5,7 +5,7 @@
 {{block header}}
    <ul>
       <li style="float:left"><a href="/WebMod/default/index.html"><b>Webmod 2.0</b></a></li>
-      <li style="float:right">
+      <li style="float:right; padding-right:20px;padding-right:20px;">
          {{if auth.user_id is None:}}
             {{=A('Sign In', _href=URL('default', 'user', args=['login']))}}
          {{else:}}
@@ -18,6 +18,12 @@
          {{else:}}
             {{=A('Logout', _href=URL('default', 'user', args='logout'))}}
          {{pass}}
+      </li>
+      <li style="float:right">
+         {{=A('Search', _href=URL('default', 'search'))}}
+      </li>
+      <li style="float:right">
+         {{=A('Modeling', _href=URL('default', 'modeling'))}}
       </li>
    </ul>
 {{end}}
@@ -90,7 +96,7 @@
                         <br><h3>{% name %}</h3><br>
                         <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isPublic === true %}
@@ -133,7 +139,7 @@
                         <h3>{% name %}</h3><br>
                         <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
@@ -177,7 +183,7 @@
                         <h3>{% name %}</h3><br>
                         <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isPublic === true %}
@@ -220,7 +226,7 @@
                         <h3>{% name %}</h3><br>
                        <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
@@ -281,7 +287,7 @@
                         <h3>{% name %}</h3><br>
                         <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isPublic === true %}
@@ -324,7 +330,7 @@
                         <h3>{% name %}</h3><br>
                         <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
@@ -364,7 +370,7 @@
                         <h3>{% name %}</h3><br>
                         <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isPublic === true %}
@@ -407,7 +413,7 @@
                         <h3>{% name %}</h3><br>
                         <img id="dynImg" src="{% thumbnail_image %}" width="150px" height="150px">
                            <br>{% description %}<br><br>
-                           <i class="fa fa-heart" style="color:#ff3333;"></i> Favorited {%num_favorites%} Times<br>
+                           <i class="fa fa-heart" style="color:#ff3333;">{%num_favorites%}</i><br>
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
